--- a/Peak TS/Ts-website/practice (Squirrel)/src/index.html
+++ b/Peak TS/Ts-website/practice (Squirrel)/src/index.html
@@ -21,6 +21,9 @@
     <h1>------------------------------------------------------------</h1>
     <button id="click">click</button>
     <p id="clicked"></p>
-    <script src="main.js"></script>
+    <h1>------------------------------------------------------------</h1>
+    <p>random text gen rgeg</p>
+    <p id="ran"></p>
+    <script src="main.ts"></script>
 </body>
 </html>
