--- a/Peak TS/Ts-website/practice (Squirrel)/src/index.html
+++ b/Peak TS/Ts-website/practice (Squirrel)/src/index.html
@@ -24,6 +24,6 @@
     <h1>------------------------------------------------------------</h1>
     <p>random text gen rgeg</p>
     <p id="ran"></p>
-    <script src="main.ts"></script>
+    <script src="main.js"></script>
 </body>
 </html>
